--- a/views/single/Galerie-single.ejs
+++ b/views/single/Galerie-single.ejs
@@ -1,58 +1,85 @@
 <% include ../partials/head %>
 
 <script src="/scripts/bootstrap-tagsinput.js"></script>
-
-
+<script src="/scripts/pwinty-products.js"></script>
 <div class="container container-single"> 
   <div class="single-wrapper">
-  <% if (locals.galleries){ %>
-      <div class="col-10 offset-1" id="<%= locals.galleries._id %>">
-          <h3 class="single-title col-12"><%= locals.galleries.title %>
-            <% if (locals.level && locals.level > 1) { %>
-              <a href="/Admin/Galerie/Patch/<%= locals.galleries._id %>"><i class="fas fa-edit"></i></a>
-            <% } %> 
-          </h3>  
+  <% if (locals.galleries) { %>
+    <div class="col-10 offset-1" id="<%= locals.galleries._id %>">
+      <h3 class="single-title col-12"><%= locals.galleries.title %>
+        <% if (locals.level && locals.level > 1) { %>
+          <a href="/Admin/Galerie/Patch/<%= locals.galleries._id %>"><i class="fas fa-edit"></i></a>
+        <% } %> 
+      </h3>  
 
-          <div class="carousel-container mt-3">
-              <div id="carousel-thumb" class="carousel slide carousel-fade carousel-thumbnails" data-ride="carousel">
-                  <div class="carousel-inner" role="listbox">
-                      <% if (locals.img) { %>
-                          <% locals.img.forEach(function (item, index) { %>
-                              <div class="carousel-item img-fluid <% if(index == 0) { %>active<% } %>">
-                                  <a href="#expand"><img onclick="expand(this);" src="http://localhost:8089/api/image/<%= item._id %>" alt="<%= index %>slide"></a>
-                                  <div class="carousel-caption d-none d-md-block">
-                                  </div>
-                              </div>
-                          <% }) %>
-                      <% } %>
-                </div>       
-                  <!--Controls-->
-                  <a class="carousel-control-prev" href="#carousel-thumb" role="button" data-slide="prev">
-                      <span><i class="fas fa-chevron-left fa-4x"></i></span>
-                      <span class="sr-only">Previous</span>
-                  </a>
-                  <a class="carousel-control-next" href="#carousel-thumb" role="button" data-slide="next">
-                      <span><i class="fas fa-chevron-right fa-4x"></i></span>
-                      <span class="sr-only">Next</span>
-                  </a>
-                  <!--/.Controls-->
-              </div>
-          </div>
-          <div class="thumbnail-wrapper mb-4 mt-3">
-              <ol class="carousel-indicators no-thumb">
-                  <% if (locals.img) { %>
-                      <% locals.img.forEach(function (item, index) { %>
-                          <li data-target="#carousel-thumb" data-slide-to="<%= index %>" <% if(index == 0) { %>class='active'<% } %>> 
-                            <img class="d-block w-100" src="/img/white_circle.png" alt="..." class="img-fluid">
-                          </li>
-                      <% }) %>
-                  <% } %>
-              </ol>
-          </div>
-          <p class="blog-content col-10 offset-1 mt-2"><%= locals.galleries.content %></p>
+      <div class="carousel-container mt-3">
+        <div id="carousel-thumb" class="carousel slide carousel-fade carousel-thumbnails" data-ride="carousel">
+          <div class="carousel-inner" role="listbox">
+            <% if (locals.img) { %>
+              <% locals.img.forEach(function (item, index) { %>
+                <div class="carousel-item img-fluid <% if(index == 0) { %>active<% } %>">
+                  <a href="#expand"><img onclick="expand(this);" src="http://localhost:8089/api/image/<%= item._id %>" alt="<%= index %>slide"></a>
+                  <div class="carousel-caption d-none d-md-block">
+                  </div>
+                </div>
+              <% }) %>
+            <% } %>
+          </div>       
+          <!--Controls-->
+          <a class="carousel-control-prev" href="#carousel-thumb" role="button" data-slide="prev">
+            <span><i class="fas fa-chevron-left fa-4x"></i></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carousel-thumb" role="button" data-slide="next">
+            <span><i class="fas fa-chevron-right fa-4x"></i></span>
+            <span class="sr-only">Next</span>
+          </a>
+          <!--/.Controls-->
+        </div>
       </div>
+      <div class="thumbnail-wrapper mb-4 mt-3">
+        <ol class="carousel-indicators no-thumb">
+          <% if (locals.img) { %>
+            <% locals.img.forEach(function (item, index) { %>
+              <li data-target="#carousel-thumb" data-slide-to="<%= index %>" <% if(index == 0) { %>class='active'<% } %>> 
+                <img class="d-block w-100" src="/img/white_circle.png" alt="..." class="img-fluid">
+              </li>
+            <% }) %>
+          <% } %>
+        </ol>
+      </div>
+      <p class="blog-content col-10 offset-1 mt-2"><%= locals.galleries.content %></p>
+
+      <div class="col-10 offset-1 text-center">
+        <div class="pwinty-products">
+          <div class="form-group text-center" id="categories">
+            <label for="framed">
+              <div class="sku-item unselectable">
+                <p>Framed Print</p>
+                <input name="pwinty-category" id="framed" value="FRA" type="radio" onclick="loadCategory(this)">
+              </div>
+            </label>
+    
+            <label for="mounted">
+              <div class="sku-item unselectable">
+                <p>Mounted Print</p>
+                <input name="pwinty-category" id="mounted" value="mounted" type="radio" onclick="loadCategory(this)"><!-- needs change VALUE -->
+              </div>
+            </label>
+          </div>
+
+          <div id="subcategories"></div>
+          <div id="attributes"></div>
+        </div>
+
+        <div id="purchasebox" style="display: none;">
+          <span id="price" style="color: white;"></span>
+          <input type="submit" class="logbtn" value="Add to cart" onclick="Pwinty.cartAdd('<%= locals.galleries._id %>', this)"><!--disabled -->
+        </div>
+    </div>
+    </div>
   <% } %>
-</div>
+  </div>
 </div>
 
 <a class="lightbox-close" href="#close">
@@ -69,5 +96,4 @@ $('#carousel-thumb').on('slide.bs.carousel', function (element) {
 </script>
 <script src="/scripts/gallery/galleryScripts.js"></script>
 <script src="/scripts/frontValidation.js"></script>
-  
 <% include ../partials/footer %>
