--- a/views/single/Galerie-single.ejs
+++ b/views/single/Galerie-single.ejs
@@ -75,8 +75,8 @@
             </label>
           </div>
 
-          <div id="subcategories"></div>
-          <div id="attributes"></div>
+          <div class="form-group text-center" id="subcategories"></div>
+          <div class="form-group text-center" id="attributes"></div>
         </div>
 
         <div id="purchasebox" style="display: none;">
