--- a/public/style.css
+++ b/public/style.css
@@ -106,47 +106,7 @@ html {
   width: 100vw;
   min-width: 500px;
   background-attachment: fixed;
-  /*
-  background-image: linear-gradient(
-      45deg,
-      rgba(48, 160, 200, 0.36) 0%,
-      rgba(48, 160, 200, 0.36) 27%,
-      rgba(66, 208, 212, 0.36) 27%,
-      rgba(66, 208, 212, 0.36) 30%,
-      rgba(57, 184, 206, 0.36) 30%,
-      rgba(57, 184, 206, 0.36) 38%,
-      rgba(75, 232, 218, 0.36) 38%,
-      rgba(75, 232, 218, 0.36) 41%,
-      rgba(38, 135, 193, 0.36) 41%,
-      rgba(38, 135, 193, 0.36) 67%,
-      rgba(29, 111, 187, 0.36) 67%,
-      rgba(29, 111, 187, 0.36) 68%,
-      rgba(20, 87, 181, 0.36) 68%,
-      rgba(20, 87, 181, 0.36) 71%,
-      rgba(11, 63, 175, 0.36) 71%,
-      rgba(11, 63, 175, 0.36) 100%
-    ),
-    linear-gradient(
-      45deg,
-      rgba(120, 161, 172, 0.37) 0%,
-      rgba(120, 161, 172, 0.37) 12.5%,
-      rgba(83, 81, 120, 0.37) 12.5%,
-      rgba(83, 81, 120, 0.37) 25%,
-      rgba(132, 188, 189, 0.37) 25%,
-      rgba(132, 188, 189, 0.37) 37.5%,
-      rgba(95, 108, 137, 0.37) 37.5%,
-      rgba(95, 108, 137, 0.37) 50%,
-      rgba(144, 215, 206, 0.37) 50%,
-      rgba(144, 215, 206, 0.37) 62.5%,
-      rgba(107, 135, 154, 0.37) 62.5%,
-      rgba(107, 135, 154, 0.37) 75%,
-      rgba(156, 242, 223, 0.37) 75%,
-      rgba(156, 242, 223, 0.37) 87.5%,
-      rgba(71, 54, 103, 0.37) 87.5%,
-      rgba(71, 54, 103, 0.37) 100%
-    ),
-    linear-gradient(63deg, rgb(156, 214, 233), rgb(74, 10, 132));*/
-    background-color: var(--brand-blue);
+  background-color: var(--brand-blue);
   /*overflow-x: hidden; ERROR FUCKS UP INFINITE LOADING TRIGGERED SCROLLING */
 }
 .container {
@@ -1721,7 +1681,7 @@ tr:hover {
 }
 
 .select-selected {
-  background-color: DodgerBlue;
+  background-color: var(--brand-blue-m2);
 }
 
 /* Style the arrow inside the select element: */
@@ -1754,11 +1714,13 @@ tr:hover {
 /* Style items (options): */
 .select-items {
   position: absolute;
-  background-color: DodgerBlue;
+  background-color: var(--brand-blue-m1);
   top: 100%;
   left: 0;
   right: 0;
   z-index: 99;
+  max-height: 300px;
+  overflow: scroll;
 }
 
 /* Hide the items when the select box is closed: */
