--- a/views/single/Galerie-single.ejs
+++ b/views/single/Galerie-single.ejs
@@ -79,9 +79,11 @@
           <div class="form-group text-center" id="attributes"></div>
         </div>
 
-        <div id="purchasebox" style="display: none;">
-          <span id="price" style="color: white;"></span>
-          <input type="submit" class="logbtn" value="Add to cart" onclick="Pwinty.cartAdd('<%= locals.galleries._id %>', this)"><!--disabled -->
+        <div style="height: 200px">
+          <div id="purchasebox" style="display: none;">
+            <span id="price" style="color: white;"></span>
+            <input type="submit" class="logbtn" value="Add to cart" onclick="Pwinty.cartAdd('<%= locals.galleries._id %>', this)"><!--disabled -->
+          </div>
         </div>
     </div>
     </div>
