changed order statuses, working on new order management

--- a/views/single/Galerie-single.ejs
+++ b/views/single/Galerie-single.ejs
@@ -73,6 +73,8 @@
                 <input name="pwinty-category" id="mounted" value="mounted" type="radio" onclick="loadCategory(this)"><!-- needs change VALUE -->
               </div>
             </label>
+
+            <h4 style="color: white">Please note that some very specific combinations of attributes may be unavailable</h1>
           </div>
 
           <div class="form-group text-center" id="subcategories"></div>
