--- a/views/restricted/Order-manage.ejs
+++ b/views/restricted/Order-manage.ejs
@@ -13,9 +13,9 @@
             <div class="form-group">
               <label class="control-label" for="selectStatus">Status de la commande</label>
               <select class="form-control" name="status" id="selectStatus">
-                <option <% if (locals.order.status == "Validated") {%> selected disabled <% } %> value="Validated">Validated</option>
-                <option <% if (locals.order.status == "Shipping") {%> selected disabled <% } %> value="Shipping">Shipping</option>
-                <option <% if (locals.order.status == "Delivered") {%> selected disabled <% } %> value="Delivered">Delivered</option>
+                <option <% if (locals.order.status == "NotYetSubmitted") {%> selected disabled <% } %> value="NotYetSubmitted">NotYetSubmitted</option>
+                <option <% if (locals.order.status == "Submitted") {%> selected disabled <% } %> value="Submitted">Submitted</option>
+                <option <% if (locals.order.status == "Complete") {%> selected disabled <% } %> value="Complete">Complete</option>
                 <option <% if (locals.order.status == "Cancelled") {%> selected disabled <% } %> <% if (locals.order.status != "Validated") {%> disabled <% } %> value="Cancelled">Cancelled</option>
               </select>
               <input type="hidden" name="orderId" value="<%= locals.order._id %>">
