--- a/public/style.css
+++ b/public/style.css
@@ -1923,7 +1923,7 @@ tr:hover {
   text-align: center;
 }
 
-#card-element {
+#card-element, .celement {
   border: 5px solid red;
   width: 50%;
   height: 50%;
