--- a/views/Payment.ejs
+++ b/views/Payment.ejs
@@ -3,7 +3,7 @@
 <script src="https://js.stripe.com/v3/"></script>
 <script>
     const stripePublicKey = '<%= locals.stripePublicKey %>';
-    const stripe = Stripe('pk_test_tFWKfxLQuvpYUl0fasc0GWjd00uwLqE3Xl');
+    const stripe = Stripe(stripePublicKey);
     const elements = stripe.elements(); 
 </script>
 
@@ -31,32 +31,46 @@
     // Custom styling can be passed to options when creating an Element.
     var style = {
       base: {
-        // Add your base input styles here. For example:
-        fontSize: '16px',
-        color: 'red',
-      },
+      color: "#32325d",
+      fontFamily: '"Helvetica Neue", Helvetica, sans-serif',
+      fontSmoothing: "antialiased",
+      fontSize: "16px",
+      "::placeholder": {
+        color: "#aab7c4"
+      }},
+      invalid: {
+        color: "#fa755a",
+        iconColor: "#fa755a"
+      }
     };
   
     // Create an instance of the card Element.
     var card = elements.create('card', {style: style});
-    // Add an instance of the card Element into the `card-element` <div>.
     card.mount('#card-element');
-  
   
     // Create a token or display an error when the form is submitted.
     var form = document.getElementById('payment-form');
     form.addEventListener('submit', function(event) {
       event.preventDefault();
+      let data = {
+        /* collect additionnal info
+            name RECOMMENDED string: Cardholder name.
+            address_line1: string
+            address_line2: string
+            address_city: string
+            address_state: string
+            address_zip: string
+            address_country RECOMMENDED string: A two character country code (for example, US).
+            currency string: Required in order to add the card to a Connect account (in all other cases, this parameter is not used).
+        */
+      };
   
-      stripe.createToken(card).then(function(result) {
+      stripe.createToken(card, data).then(function(result) {
         if (result.error) {
-          // Inform the customer that there was an error.
           var errorElement = document.getElementById('card-errors');
           errorElement.textContent = result.error.message;
-        } else {
-          // Send the token to your server.
-          stripeTokenHandler(result.token);
-        }
+        } else 
+            stripeTokenHandler(result.token);
       });
     });
   
@@ -69,9 +83,7 @@
       hiddenInput.setAttribute('value', token.id);
       form.appendChild(hiddenInput);
   
-      // Submit the form
       form.submit();
   } 
 </script>
-
 <% include partials/footer %>
