--- a/public/style.css
+++ b/public/style.css
@@ -1353,6 +1353,11 @@ a.lightbox-close {
 /* END ABOUT */
 
 /* CART */
+.linkbtn:hover {
+  color: inherit;
+  text-decoration: none;
+}
+
 .panel-heading {
   border-top: 1px solid var(--brand-blue-p1);
   padding-top: 15px;
