--- a/views/Cart.ejs
+++ b/views/Cart.ejs
@@ -1,71 +1,63 @@
 <% include partials/head %>
 
-<script src="https://checkout.stripe.com/checkout.js" ></script>
-<script src="https://js.stripe.com/v3/"></script>
-<script>
-  const stripePublicKey = '<%= locals.stripePublicKey %>';
-  const stripe = Stripe('pk_test_tFWKfxLQuvpYUl0fasc0GWjd00uwLqE3Xl');
-  const elements = stripe.elements(); 
-</script>
 <script src="/scripts/cart.js"></script>
-
 <div class="container container-single"> 
   <div class="single-wrapper">
     <div class="col-10 offset-1">
       <div class="text-center">
         <b class="alertEmpty text-center" id="alertEmpty" <% if (locals.totalPrice != 0) { %> style="display: none;" <% } %>>Votre panier est vide!</b>
       </div>
-    <% if(locals.products){ %>
-      <% if (locals.totalPrice != 0 && locals.totalQty != 0) { %>
-        <div class="cart-row" id="cart-row-header">
-          <span class="cart-item cart-header cart-column">ITEM</span>
-          <span class="cart-quantity cart-header cart-column">QUANTITÉ</span>
-          <span class="cart-price cart-header cart-column">PRIX</span>
+      <% if(locals.products){ %>
+        <% if (locals.totalPrice != 0 && locals.totalQty != 0) { %>
+          <div class="cart-row" id="cart-row-header">
+            <span class="cart-item cart-header cart-column">ITEM</span>
+            <span class="cart-quantity cart-header cart-column">QUANTITÉ</span>
+            <span class="cart-price cart-header cart-column">PRIX</span>
+          </div>
+        <% } %>
+
+        <% Object.keys(locals.products).forEach(function (index) { %>
+          <div class="cart-row cart-row-item" id="<%= locals.products[index].item._id %><% if (!locals.products[index].item.isUnique) { %>-<%= index %><% } %>">
+            <div class="cart-item cart-column">
+              <% if (locals.products[index].item.isUnique === true) { %>
+                <img class="cart-img" src="/api/image/main/Shop/<%= locals.products[index].item._id %>" alt="<%= locals.products[index].item.title %>">
+              <% } else { %>
+                <img class="cart-img" src="/api/image/main/Gallery/<%= locals.products[index].item._id %>" alt="<%= locals.products[index].item.title %>">
+              <% } %>
+              <div class="cart-title-description">
+                <h4 class="cart-item-title"><b><%= locals.products[index].shorttitle %>...</b></h4>
+                <p class="cart-item-description"><%= locals.products[index].shortcontent %>...</p>
+                <p><%= locals.products[index].details %></p>
+              </div>
+            </div>
+                
+            <div class="cart-quantity cart-column">
+              <% if (locals.products[index].item.isUnique === true) { %>
+                <i class="fas fa-minus fa-2x qty-update" onclick="cartDel('<%= locals.products[index].item._id %>', this)"></i>
+                <input id="qty-<%= locals.products[index].item._id %>" class="cart-item-qty form-control" value="<%= locals.products[index].qty %>" name="cart-item-qty" title="Numbers only" readonly>
+                <i class="fas fa-plus fa-2x qty-update" min="0" style="color: var(--dark-shade-m1); cursor: default;"></i>
+              <% } else { %>
+                <i class="fas fa-minus fa-2x qty-update" onclick="pwintyCartDel('<%= locals.products[index].item._id %>', '<%= index %>', this)"></i>
+                <input id="qty-<%= locals.products[index].item._id %>-<%= index %>" class="cart-item-qty form-control" value="<%= locals.products[index].qty %>" name="cart-item-qty" title="Numbers only" onchange="pwintyUpdateValue(event, this, '<%= locals.products[index].item._id %>', '<%= index %>')">
+                <i class="fas fa-plus fa-2x qty-update" min="0" onclick="pwintyCartAdd('<%= locals.products[index].item._id %>', '<%= index %>', this)"></i>
+              <% } %>
+            </div>
+
+            <div class="cart-price cart-column">
+              <p class="cart-item-price"><b><%= locals.products[index].price %>€</b></p>
+              <% if (locals.products[index].item.isUnique !== true) { %>
+                <p class="cart-item-unitprice"><b><%= locals.products[index].unitPrice %>€/Unité</b></p>
+              <% } %>
+            </div>
         </div>
+        <% }) %>
       <% } %>
 
-      <% Object.keys(locals.products).forEach(function (index) { %>
-        <div class="cart-row cart-row-item" id="<%= locals.products[index].item._id %><% if (!locals.products[index].item.isUnique) { %>-<%= index %><% } %>">
-          <div class="cart-item cart-column">
-            <% if (locals.products[index].item.isUnique === true) { %>
-              <img class="cart-img" src="/api/image/main/Shop/<%= locals.products[index].item._id %>" alt="<%= locals.products[index].item.title %>">
-            <% } else { %>
-              <img class="cart-img" src="/api/image/main/Gallery/<%= locals.products[index].item._id %>" alt="<%= locals.products[index].item.title %>">
-            <% } %>
-            <div class="cart-title-description">
-              <h4 class="cart-item-title"><b><%= locals.products[index].shorttitle %>...</b></h4>
-              <p class="cart-item-description"><%= locals.products[index].shortcontent %>...</p>
-              <p><%= locals.products[index].details %></p>
-            </div>
-          </div>
-              
-          <div class="cart-quantity cart-column">
-            <% if (locals.products[index].item.isUnique === true) { %>
-              <i class="fas fa-minus fa-2x qty-update" onclick="cartDel('<%= locals.products[index].item._id %>', this)"></i>
-              <input id="qty-<%= locals.products[index].item._id %>" class="cart-item-qty form-control" value="<%= locals.products[index].qty %>" name="cart-item-qty" title="Numbers only" readonly>
-              <i class="fas fa-plus fa-2x qty-update" min="0" style="color: var(--dark-shade-m1); cursor: default;"></i>
-            <% } else { %>
-              <i class="fas fa-minus fa-2x qty-update" onclick="pwintyCartDel('<%= locals.products[index].item._id %>', '<%= index %>', this)"></i>
-              <input id="qty-<%= locals.products[index].item._id %>-<%= index %>" class="cart-item-qty form-control" value="<%= locals.products[index].qty %>" name="cart-item-qty" title="Numbers only" onchange="pwintyUpdateValue(event, this, '<%= locals.products[index].item._id %>', '<%= index %>')">
-              <i class="fas fa-plus fa-2x qty-update" min="0" onclick="pwintyCartAdd('<%= locals.products[index].item._id %>', '<%= index %>', this)"></i>
-            <% } %>
-          </div>
-
-          <div class="cart-price cart-column">
-            <p class="cart-item-price"><b><%= locals.products[index].price %>€</b></p>
-            <% if (locals.products[index].item.isUnique !== true) { %>
-              <p class="cart-item-unitprice"><b><%= locals.products[index].unitPrice %>€/Unité</b></p>
-            <% } %>
-          </div>
-      </div>
-      <% }) %>
-    <% } %>
-
-    <% if(locals.isDelivery){ %>
-      <div class="panel-heading">
-        <h2 class="panel-title">Informations pour la livraison</h2>
-        <h6>Nous utiliserons ces informations pour livrer vos commandes, cliquez <a href="/User">ici</a> pour modifier ces informations</h6>
-      </div>
+      <% if(locals.isDelivery) { %>
+        <div class="panel-heading">
+          <h2 class="panel-title">Informations pour la livraison</h2>
+          <h6>Nous utiliserons ces informations pour livrer vos commandes, cliquez <a href="/User">ici</a> pour modifier ces informations</h6>
+        </div>
         <div class="row">
           <div class="col-md-6">
             <label class="control-label">Nom</label>
@@ -81,7 +73,7 @@
 
         <label class="control-label">Adresse</label>        
         <input id="autocomplete" name="fulltext_address" placeholder="Enter your address" onFocus="geolocate()" class="form-control" value="<% if (locals.delivery.full_address) { %><%= locals.delivery.full_address %><% } %>" required>
-        
+          
         <div id="address">
           <div class="row">
             <div class="col-md-12">
@@ -110,83 +102,27 @@
             </div>
           </div>
         </div>
-            <div class="row mt-3">
-              <div class="col-md-6">
-                <textarea id="instructions" class="instructions-textarea" name="instructions" placeholder="Door code or other useful informations..." readonly><% if (locals.delivery.instructions) { %><%= locals.delivery.instructions %><% } %></textarea>
-              </div>
-              <% } %>
+        <div class="row mt-3">
+          <div class="col-md-6">
+            <textarea id="instructions" class="instructions-textarea" name="instructions" placeholder="Door code or other useful informations..." readonly><% if (locals.delivery.instructions) { %><%= locals.delivery.instructions %><% } %></textarea>
+          </div>
+      <% } %>
 
-              <% if (locals.totalPrice != 0 && locals.totalQty != 0){ %>
-                <div class="col-md-6 offset-3 mt-4">
-                  <div class="payment-div p-3">
-                    <span id="total-price-span">PRIX TOTAL: <b id="total-price"><%= locals.totalPrice %>€</b></span>
-                    <span id="total-qty-span">QUANTITÉ TOTALE: <b id="total-qty"><%= locals.totalQty %></b></span>
-                    <button class="btn-purchase" onclick="submitCheckout();" type="button" id="purchase">Continuer</button>
-                  </div>
-                </div>
-              <% } %>
-              <% if(locals.isDelivery){ %>
-            </div>
+      <% if (locals.totalPrice != 0 && locals.totalQty != 0) { %>
+        <div class="col-md-6 offset-3 mt-4">
+          <div class="payment-div p-3">
+            <span id="total-price-span">PRIX TOTAL: <b id="total-price"><%= locals.totalPrice %>€</b></span>
+            <span id="total-qty-span">QUANTITÉ TOTALE: <b id="total-qty"><%= locals.totalQty %></b></span>
+            <a href="/Payment" class="linkbtn"><button class="btn-purchase" onclick="submitCheckout();" type="button" id="purchase">Continuer</button></a>
           </div>
         </div>
       <% } %>
-      </div>
+      <% if(locals.isDelivery){ %>
+        </div>
+      <% } %>
     </div>
   </div>
 </div>
-
-<!--
-<script>
-  let stripeHandler = StripeCheckout.configure({
-    key: stripePublicKey,
-    locale: "auto",
-    token: function (token) {
-      console.log(token)
-    /* calls to purchase API, clears cart and redirects to order if purchase is succesful */
-    fetch('/api/cart/purchase', {
-      method: 'POST',
-      headers: {
-        'Content-Type': 'application/json',
-        'Accept': 'application/json'
-      },
-      body: JSON.stringify({stripeTokenId: token.id,})
-    })
-    .then((res) => {return res.json()})
-    .then((data) => {
-      console.log(data);
-      if (data.err === false) {
-        window.location.href = `http://localhost:8089/api/cart/clear/${data.id}`;
-      } else {
-        console.log("Something went wrong with your purchase!");
-        throw new Error(data.msg)
-      }
-    })
-    .catch((err) => {
-      let alert = createAlertNode(err.message);
-      addAlert(alert, "#header");
-    })
-  }
-})
-
-function submitCheckout () {
-  /*fetch('/api/cart/purchase', {
-      method: 'POST',
-      headers: {
-        'Content-Type': 'application/json',
-        'Accept': 'application/json'
-      },
-      body: JSON.stringify({stripeTokenId: "issou",})
-    })
-    return;*/
-    //
-  let isLogged = "<%= locals.name %>";
-  let isDelivery = "<%= locals.isDelivery %>";
-
-  checkoutCaller(isLogged, isDelivery);
-}-->
-</script>
-var PWINTY_DATA = [];
-</script>
 
 <% if(locals.products){ %>
   <% Object.keys(locals.products).forEach(function (index) { %>
