--- a/views/Payment.ejs
+++ b/views/Payment.ejs
@@ -7,24 +7,28 @@
     const elements = stripe.elements(); 
 </script>
 
-<div class="container" style="position: sticky;"> 
-    <div class="payment-form-wrapper">
+<div class="container container-single"> 
+  <div class="single-wrapper">
+   
+    <div class="payment-form-wrapper col-6 offset-3"> 
+      <h1 class="payment-price" style="color: white"><% if (locals.totalPrice) { %><%= locals.totalPrice %><% } %>€</h1>
         <form action="/api/stripe/charge" method="POST" id="payment-form">
-            <div class="form-row">
-            <label for="card-element">
+            <label for="card-element" class="card-label">
                 Credit or debit card
             </label>
-            <div id="card-element">
-                <!-- A Stripe Element will be inserted here. -->
+            <div class="form-row">
+              <div id="card-element">
+                  <!-- A Stripe Element will be inserted here. -->
+              </div>
+          
+              <!-- Used to display Element errors. -->
+              <div id="card-errors" role="alert" class="card-error"></div>
             </div>
         
-            <!-- Used to display Element errors. -->
-            <div id="card-errors" role="alert"></div>
-            </div>
-        
-            <button>Submit Payment</button>
+            <button class="btn-pay mt-3">Submit Payment</button>
         </form>
     </div>
+  </div>
 </div>
   
 <script>
