added global fine art prints

--- a/views/single/Galerie-single.ejs
+++ b/views/single/Galerie-single.ejs
@@ -1,6 +1,7 @@
 <% include ../partials/head %>
 
 <script src="/scripts/bootstrap-tagsinput.js"></script>
+<script src="/scripts/pwinty-exports.js"></script>
 <script src="/scripts/pwinty-products.js"></script>
 <div class="container container-single"> 
   <div class="single-wrapper">
@@ -67,10 +68,10 @@
               </div>
             </label>
     
-            <label for="mounted">
+            <label for="print">
               <div class="sku-item unselectable">
-                <p>Mounted Print</p>
-                <input name="pwinty-category" id="mounted" value="mounted" type="radio" onclick="loadCategory(this)"><!-- needs change VALUE -->
+                <p>Art Prints</p>
+                <input name="pwinty-category" id="print" value="PRINT" type="radio" onclick="loadCategory(this)"><!-- needs change VALUE -->
               </div>
             </label>
 
