added canvas (rolled/stretched/framed) with all sizes, need to add respective attributes now

--- a/views/single/Galerie-single.ejs
+++ b/views/single/Galerie-single.ejs
@@ -75,6 +75,13 @@
               </div>
             </label>
 
+            <label for="canvas">
+              <div class="sku-item unselectable">
+                <p>Canvas</p>
+                <input name="pwinty-category" id="canvas" value="CAN" type="radio" onclick="loadCategory(this)">
+              </div>
+            </label>
+
             <h4 style="color: white">Please note that some very specific combinations of attributes may be unavailable</h1>
           </div>
 
