--- a/views/Payment.ejs
+++ b/views/Payment.ejs
@@ -12,7 +12,22 @@
    
     <div class="payment-form-wrapper col-6 offset-3"> 
       <h1 class="payment-price" style="color: white"><% if (locals.totalPrice) { %><%= locals.totalPrice %><% } %>€</h1>
+      <!-- define form(using old one (charge))
+        <form id="payment-form">
+        <div id="card-element">Stripe.js injects the Card Element</div>
+        <button id="submit">
+          <div class="spinner hidden" id="spinner"></div>
+          <span id="button-text">Pay</span>
+        </button>
+        <p id="card-errors" role="alert"></p>
+        <p class="result-message hidden">
+          Payment succeeded, see the result in your
+          <a href="" target="_blank">Stripe dashboard.</a> Refresh the page to pay again.
+        </p>
+      </form> 
+      -->
         <form action="/api/stripe/charge" method="POST" id="payment-form">
+            <input type="text" id="email" placeholder="Email address" />
             <label for="card-element" class="card-label">
                 Credit or debit card
             </label>
@@ -32,27 +47,80 @@
 </div>
   
 <script>
-    // Custom styling can be passed to options when creating an Element.
-    var style = {
-      base: {
-      color: "#32325d",
-      fontFamily: '"Helvetica Neue", Helvetica, sans-serif',
-      fontSmoothing: "antialiased",
-      fontSize: "16px",
-      "::placeholder": {
-        color: "#aab7c4"
-      }},
-      invalid: {
-        color: "#fa755a",
-        iconColor: "#fa755a"
-      }
+    fetch("/api/stripe/create-intent", {
+      method: "POST",
+      headers: {
+        "Content-Type": "application/json"
+      },
+      body: []
+    })
+    .then(function(result) {return result.json();})
+    .then(function(data) {
+      // if data.error == false
+      var elements = stripe.elements();
+
+      // Custom styling can be passed to options when creating an Element.
+      var style = {
+        base: {
+        color: "#32325d",
+        fontFamily: '"Helvetica Neue", Helvetica, sans-serif',
+        fontSmoothing: "antialiased",
+        fontSize: "16px",
+        "::placeholder": {
+          color: "#aab7c4"
+        }},
+        invalid: {
+          color: "#fa755a",
+          iconColor: "#fa755a"
+        }
+      };
+
+      // Create an instance of the card Element.
+      var card = elements.create('card', {style: style});
+      card.mount('#card-element');
+    
+
+      card.on("change", function (event) {
+        // Disable the Pay button if there are no card details in the Element
+        document.querySelector("button").disabled = event.empty;
+        document.querySelector("#card-errors").textContent = event.error ? event.error.message : "";
+      });
+
+      var form = document.getElementById("payment-form");
+      form.addEventListener("submit", function(event) {
+        event.preventDefault();
+        // Complete payment when the submit button is clicked
+        payWithCard(stripe, card, data.clientSecret);
+      });
+    })
+
+    // Calls stripe.confirmCardPayment
+    // If the card requires authentication Stripe shows a pop-up modal to
+    // prompt the user to enter authentication details without leaving your page.
+    var payWithCard = function(stripe, card, clientSecret) {
+      //loading(true);
+
+      stripe.confirmCardPayment(clientSecret, {
+        receipt_email: document.getElementById('email').value,
+        payment_method: {
+          card: card
+        }
+      })
+      .then(function(result) {
+        if (result.error) {
+          // Show error to your customer
+          alert("oh no")
+          //showError(result.error.message);
+        } else {
+          // The payment succeeded!
+          alert("SUCESS")
+          //orderComplete(result.paymentIntent.id);
+        }
+      });
     };
+
   
-    // Create an instance of the card Element.
-    var card = elements.create('card', {style: style});
-    card.mount('#card-element');
-  
-    // Create a token or display an error when the form is submitted.
+    /* Create a token or display an error when the form is submitted.
     var form = document.getElementById('payment-form');
     form.addEventListener('submit', function(event) {
       event.preventDefault();
@@ -66,7 +134,7 @@
             address_zip: string
             address_country RECOMMENDED string: A two character country code (for example, US).
             currency string: Required in order to add the card to a Connect account (in all other cases, this parameter is not used).
-        */
+        
       };
   
       stripe.createToken(card, data).then(function(result) {
@@ -88,6 +156,6 @@
       form.appendChild(hiddenInput);
   
       form.submit();
-  } 
+  } */
 </script>
 <% include partials/footer %>
