--- a/views/Payment.ejs
+++ b/views/Payment.ejs
@@ -47,6 +47,7 @@
 </div>
   
 <script>
+    var orderId;
     fetch("/api/stripe/create-intent", {
       method: "POST",
       headers: {
@@ -63,6 +64,7 @@
         document.querySelector(".btn-pay").disabled = true
         return ;
       }
+      orderId = data.orderId;
 
       var elements = stripe.elements();
       var style = {
@@ -109,20 +111,28 @@
         if (result.error) {
           let alert = createAlertNode("Your payment didn't go through, please try again");
           addAlert(alert, "#header");
-        } else {
-          fetch("/api/order/confirm", {
-            method: "POST",
-            headers: {
-              "Content-Type": "application/json"
-            },
-            body: JSON.stringify({paymentIntentId: result.paymentIntent.id})
-          })
-          .then(function(result) {return result.json();})
-          .then(function(data) {
-            //check if success 
-            window.location.href = `/api/cart/clear/${data.orderId}`;
-          })
-        }
+          return ;
+        } 
+
+
+        fetch("/api/order/confirm", { //to remove once live using webhooks
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json"
+          },
+          body: JSON.stringify({type: "payment_intent.succeeded", data: {object: {id:result.paymentIntent.id}}})
+        })
+        .then(function(result) {return result.json();})
+        .then(function(data) {
+          if (data.error === true) {
+            let alert = createAlertNode(data.message);
+            addAlert(alert, "#header");
+            return ;
+          }
+        })
+        
+
+        window.location.href = `/api/cart/clear/${orderId}`;
       });
     };
 
