finalizing stripe payment + order creation and pwinty order management, fixed errors, secured stripe refund

--- a/views/Cart.ejs
+++ b/views/Cart.ejs
@@ -113,7 +113,7 @@
           <div class="payment-div p-3">
             <span id="total-price-span">PRIX TOTAL: <b id="total-price"><%= locals.totalPrice %>€</b></span>
             <span id="total-qty-span">QUANTITÉ TOTALE: <b id="total-qty"><%= locals.totalQty %></b></span>
-            <a href="/Payment" class="linkbtn"><button class="btn-purchase" onclick="submitCheckout();" type="button" id="purchase">Continuer</button></a>
+            <a href="/Payment" class="linkbtn"><button class="btn-purchase" type="button" id="purchase">Continuer</button></a>
           </div>
         </div>
       <% } %>
