--- a/views/Payment.ejs
+++ b/views/Payment.ejs
@@ -106,12 +106,13 @@
         }
       })
       .then(function(result) {
-        console.log(result, result.paymentIntent.id)
+        console.log(result)
         if (result.error) {
-          let alert = createAlertNode("Your payment didn't go through, please try again", "warning");
+          let alert = createAlertNode(result.error.message, "warning");
           addAlert(alert, "#header");
           return ;
         } 
+        console.log(result, result.paymentIntent.id)
 
 
         fetch("/api/order/confirm", { //to remove once live using webhooks
@@ -129,48 +130,9 @@
             return ;
           }
         })
-        
 
         window.location.href = `/api/cart/clear/${orderId}`;
       });
     };
-
-    /* Create a token or display an error when the form is submitted.
-    var form = document.getElementById('payment-form');
-    form.addEventListener('submit', function(event) {
-      event.preventDefault();
-      let data = {
-        /* collect additionnal info
-            name RECOMMENDED string: Cardholder name.
-            address_line1: string
-            address_line2: string
-            address_city: string
-            address_state: string
-            address_zip: string
-            address_country RECOMMENDED string: A two character country code (for example, US).
-            currency string: Required in order to add the card to a Connect account (in all other cases, this parameter is not used).
-        
-      };
-  
-      stripe.createToken(card, data).then(function(result) {
-        if (result.error) {
-          var errorElement = document.getElementById('card-errors');
-          errorElement.textContent = result.error.message;
-        } else 
-            stripeTokenHandler(result.token);
-      });
-    });
-  
-    function stripeTokenHandler(token) {
-      // Insert the token ID into the form so it gets submitted to the server
-      var form = document.getElementById('payment-form');
-      var hiddenInput = document.createElement('input');
-      hiddenInput.setAttribute('type', 'hidden');
-      hiddenInput.setAttribute('name', 'stripeToken');
-      hiddenInput.setAttribute('value', token.id);
-      form.appendChild(hiddenInput);
-  
-      form.submit();
-  } */
 </script>
 <% include partials/footer %>
